# vectorbench

./: .gitignore  PLAN.md  README.md  TICKETS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DATASET_LICENSES.md  ROADMAP.md
examples/: benchmark-50k.yaml  quickstart.yaml  scifact-small.yaml  wiki-50k-highrecall.yaml  wiki-50k-local.yaml
examples/data/small/: README.md  queries.jsonl
scripts/: build_wiki_50k.py
tests/: test_config.py  test_dataset_download.py  test_hashing.py  test_metrics.py  test_runner_smoke.py
vectorbench/: __init__.py  cli.py  config.py  dataset.py  embedding.py  hashing.py  index.py  machine_info.py  metrics.py  report.py  runner.py
vectorbench/templates/: experiment_report.html.j2
